# stablecoin-keeper

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  ethereum.toml  soneium.toml
.github/workflows/: ci-cd.yml  ci.yml  deploy-admin-ui.yml  docker-admin-ui.yaml  docker.yaml  test-secrets.yml
admin/: Dockerfile  admin-ui.html  docker-entrypoint.sh
admin-ui/: admin.html
admin/admin-apis/: env.example  index.mjs  package-lock.json  package.json
admin/admin-backend/: env.example  index.mjs
configs/: common.toml  ethereum-mainnet.toml  ethereum-sepolia.toml  soneium-mainnet.toml  soneium-minato.toml
scripts/: deploy-to-harbor.sh  get_kms_address.rs
src/: api.rs  blockchain.rs  config.rs  database.rs  keeper.rs  kms_signer.rs  lib.rs  main.rs  retry.rs  transaction_monitor.rs
src/contracts/: earn_vault.rs  erc20.rs  mod.rs  reward_redistributor.rs  usdsc.rs
src/jobs/: boost_rewards.rs  boost_rewards_s3.rs  boost_rewards_service.rs  claim_yield.rs  distribute_rewards.rs  mod.rs
src/sources/: boost_rewards_s3.rs  mod.rs  s3_campaign_source.rs
tests/: cli_tests.rs  e2e_tests.rs  integration_tests.rs  kms_tests.rs  signer_and_transaction_tests.rs  unit_tests.rs
