[package]
name = "stablecoin-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# CLI parsing
clap = { version = "4.0", features = ["derive"] }

# Config file parsing (for TOML)
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Web3 (using correct Alloy version and features)
alloy = { version = "1.0", features = ["full"] }
alloy-signer = "1.0"
alloy-signer-local = "1.0"

# Error handling
anyhow = "1.0"

# Configuration
dotenv = "0.15"
regex = "1.0"

# Additional dependencies for manual RPC calls
hex = "0.4"
url = "2.5"