[package]
name = "stablecoin-backend"
version = "0.1.0"
edition = "2021"
default-run = "stablecoin-backend"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# CLI parsing
clap = { version = "4.0", features = ["derive"] }

# Config file parsing (for TOML)
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Web3 (using correct Alloy version and features)
alloy = { version = "1.0", features = ["full", "signer-aws"] }
alloy-signer-aws = "1.0"

# Error handling
anyhow = "1.0"

# Configuration
dotenv = "0.15"
regex = "1.0"

# Additional dependencies for manual RPC calls
hex = "0.4"
url = "2.5"

# AWS KMS for secure signing
aws-config = "1.0"
aws-sdk-kms = "1.0"

[[bin]]
name = "get-kms-address"
path = "scripts/get_kms_address.rs"
